<resources>
    <string name="app_name">MovieRetrofitRxKotlin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trending">Trending Movies</string>
    <string name="view_all">VIEW ALL</string>
    <string name="theatre">Now Watching</string>
    <string name="upcoming">Coming Soon</string>
    <string name="search">Search</string>
    <string name="running_time">Running Time</string>
    <string name="rating">Rating</string>
    <string name="release">Release Date</string>
</resources>
