<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorBlueDark"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".ui.main.MainActivity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View android:layout_width="match_parent" android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:focusable="true"
              app:layout_constraintTop_toTopOf="parent"></View>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_movie_background"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="12sp"
                android:textColorHint="@color/colorManatee"
                android:hint="@string/search"
                android:focusable="false"
                android:cursorVisible="false"
                android:autofillHints="Search"
                android:textColor="@color/colorWhiteSmoke"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:drawableRight="@drawable/ic_search_white"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:id="@+id/editTextSearch"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17sp"
                android:paddingTop="10sp"
                android:background="@color/colorBlueDarkLight"
                android:paddingBottom="15sp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextSearch" android:id="@+id/constraintLayout2">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout">
                <TextView
                        android:text="@string/trending"
                        android:textColor="@color/colorGrey"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewAllTrending"
                        android:textColor="@color/colorGrey"
                        android:textSize="13sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="4dp"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTrending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:orientation="horizontal"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_trending"
                    tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17sp"
                android:paddingTop="10sp"
                android:background="@color/colorBlueDarkLight"
                android:paddingBottom="15sp"
                android:id="@+id/constraintLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayoutInTheather" android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="0.0">
                <TextView
                        android:text="@string/theatre"
                        android:textColor="@color/colorGrey"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textInTheatres"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewAllTheatre"
                        android:textColor="@color/colorGrey"
                        android:textSize="13sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="4dp"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTheatre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:orientation="horizontal"
                    tools:listitem="@layout/item_theatre_upcoming"
                    tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutInTheather">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17sp"
                android:paddingTop="10sp"
                android:background="@color/colorBlueDarkLight"
                android:paddingBottom="15sp"
                android:id="@+id/constraintLayout4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayoutUpcoming"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="0.0">
                <TextView
                        android:text="@string/upcoming"
                        android:textColor="@color/colorGrey"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textUpcoming"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewAllUpcoming"
                        android:textColor="@color/colorGrey"
                        android:textSize="13sp"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="4dp"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:orientation="horizontal"
                    tools:listitem="@layout/item_theatre_upcoming"
                    tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutUpcoming">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>

